[package]
name = "longtrace"
version = "0.1.0"
edition = "2021"
description = "A long-time trace reporting tool built with Rust + pyo3"

[lib]
name = "longtrace"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
tokio-postgres = "0.7"
deadpool-postgres = "0.14"
chrono = "0.4"
serde_json = "1"
