[package]
name = "longtrace"
version = "0.1.0"
edition = "2021"

[lib]
name = "longtrace"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21", features = ["auto-initialize"] }
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
r2d2 = "0.8"
r2d2_postgres = "0.18"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4", "v7"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
